ulActionsParser.java
// $ANTLR 3.5.2 ulActions.g 2021-07-13 23:54:11

    import java.util.Vector;
    import visitor.ast.*;
    import static visitor.ast.Type.*;
    import static visitor.ast.Operator.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class ulActionsParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADDITION", "ASSIGN", "BOOLEAN", 
		"BRACKET_LEFT", "BRACKET_RIGHT", "CHAR", "CHARACTER", "CHARACTERCONSTANT", 
		"COLON", "COMMA", "COMMENT", "CURLY_LEFT", "CURLY_RIGHT", "DIGIT", "ELSE", 
		"EQUALS", "EXCLAMATION", "FALSE", "FLOAT", "FLOATCONSTANT", "ID", "IF", 
		"INT", "INTEGERCONSTANT", "LESS_THAN", "LETTER", "MULTIPLY", "NEWLINE", 
		"NONZERO", "PAREN_LEFT", "PAREN_RIGHT", "PERIOD", "PRINT", "PRINTLN", 
		"QUOTE_DOUBLE", "QUOTE_SINGLE", "RETURN", "SEMICOLON", "SPACE", "STRING", 
		"STRINGCONSTANT", "SUBTRACTION", "TAB", "TRUE", "UNDERSCORE", "VOID", 
		"WHILE", "WS", "ZERO"
	};
	public static final int EOF=-1;
	public static final int ADDITION=4;
	public static final int ASSIGN=5;
	public static final int BOOLEAN=6;
	public static final int BRACKET_LEFT=7;
	public static final int BRACKET_RIGHT=8;
	public static final int CHAR=9;
	public static final int CHARACTER=10;
	public static final int CHARACTERCONSTANT=11;
	public static final int COLON=12;
	public static final int COMMA=13;
	public static final int COMMENT=14;
	public static final int CURLY_LEFT=15;
	public static final int CURLY_RIGHT=16;
	public static final int DIGIT=17;
	public static final int ELSE=18;
	public static final int EQUALS=19;
	public static final int EXCLAMATION=20;
	public static final int FALSE=21;
	public static final int FLOAT=22;
	public static final int FLOATCONSTANT=23;
	public static final int ID=24;
	public static final int IF=25;
	public static final int INT=26;
	public static final int INTEGERCONSTANT=27;
	public static final int LESS_THAN=28;
	public static final int LETTER=29;
	public static final int MULTIPLY=30;
	public static final int NEWLINE=31;
	public static final int NONZERO=32;
	public static final int PAREN_LEFT=33;
	public static final int PAREN_RIGHT=34;
	public static final int PERIOD=35;
	public static final int PRINT=36;
	public static final int PRINTLN=37;
	public static final int QUOTE_DOUBLE=38;
	public static final int QUOTE_SINGLE=39;
	public static final int RETURN=40;
	public static final int SEMICOLON=41;
	public static final int SPACE=42;
	public static final int STRING=43;
	public static final int STRINGCONSTANT=44;
	public static final int SUBTRACTION=45;
	public static final int TAB=46;
	public static final int TRUE=47;
	public static final int UNDERSCORE=48;
	public static final int VOID=49;
	public static final int WHILE=50;
	public static final int WS=51;
	public static final int ZERO=52;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public ulActionsParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public ulActionsParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return ulActionsParser.tokenNames; }
	@Override public String getGrammarFileName() { return "ulActions.g"; }



	// $ANTLR start "program"
	// ulActions.g:20:1: program returns [Program p] : f1= function (f2= function )* EOF ;
	public final Program program() throws RecognitionException {
		Program p = null;


		Function f1 =null;
		Function f2 =null;

		try {
			// ulActions.g:21:5: (f1= function (f2= function )* EOF )
			// ulActions.g:21:7: f1= function (f2= function )* EOF
			{
			pushFollow(FOLLOW_function_in_program33);
			f1=function();
			state._fsp--;
			if (state.failed) return p;
			if ( state.backtracking==0 ) {p = new Program(f1.getLine(), f1.getCharPositionInLine(), f1.getTokenIndex()); p.addFunction(f1);}
			// ulActions.g:23:5: (f2= function )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==BOOLEAN||LA1_0==CHAR||LA1_0==FLOAT||LA1_0==INT||LA1_0==STRING||LA1_0==VOID) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// ulActions.g:23:6: f2= function
					{
					pushFollow(FOLLOW_function_in_program54);
					f2=function();
					state._fsp--;
					if (state.failed) return p;
					if ( state.backtracking==0 ) {p.addFunction(f2);}
					}
					break;

				default :
					break loop1;
				}
			}

			match(input,EOF,FOLLOW_EOF_in_program60); if (state.failed) return p;
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return p;
	}
	// $ANTLR end "program"



	// $ANTLR start "function"
	// ulActions.g:26:1: function returns [Function f3] : fd1= functionDecl fb1= functionBody ;
	public final Function function() throws RecognitionException {
		Function f3 = null;


		FunctionDeclaration fd1 =null;
		FunctionBody fb1 =null;

		try {
			// ulActions.g:27:5: (fd1= functionDecl fb1= functionBody )
			// ulActions.g:27:7: fd1= functionDecl fb1= functionBody
			{
			pushFollow(FOLLOW_functionDecl_in_function83);
			fd1=functionDecl();
			state._fsp--;
			if (state.failed) return f3;
			pushFollow(FOLLOW_functionBody_in_function87);
			fb1=functionBody();
			state._fsp--;
			if (state.failed) return f3;
			if ( state.backtracking==0 ) {f3 = new Function(fd1.getLine(), fd1.getCharPositionInLine(), fd1.getTokenIndex(), fd1, fb1);}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return f3;
	}
	// $ANTLR end "function"



	// $ANTLR start "functionDecl"
	// ulActions.g:31:1: functionDecl returns [FunctionDeclaration fd2] : (ct1= compoundType i1= id PAREN_LEFT PAREN_RIGHT |ct6= compoundType i17= id PAREN_LEFT fp1= formalParameters PAREN_RIGHT );
	public final FunctionDeclaration functionDecl() throws RecognitionException {
		FunctionDeclaration fd2 = null;


		CompoundType ct1 =null;
		Identifier i1 =null;
		CompoundType ct6 =null;
		Identifier i17 =null;
		Vector<Variable> fp1 =null;

		try {
			// ulActions.g:32:5: (ct1= compoundType i1= id PAREN_LEFT PAREN_RIGHT |ct6= compoundType i17= id PAREN_LEFT fp1= formalParameters PAREN_RIGHT )
			int alt2=2;
			switch ( input.LA(1) ) {
			case INT:
				{
				int LA2_1 = input.LA(2);
				if ( (LA2_1==ID) ) {
					int LA2_7 = input.LA(3);
					if ( (LA2_7==PAREN_LEFT) ) {
						int LA2_9 = input.LA(4);
						if ( (LA2_9==PAREN_RIGHT) ) {
							alt2=1;
						}
						else if ( (LA2_9==BOOLEAN||LA2_9==CHAR||LA2_9==FLOAT||LA2_9==INT||LA2_9==STRING||LA2_9==VOID) ) {
							alt2=2;
						}

						else {
							if (state.backtracking>0) {state.failed=true; return fd2;}
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 2, 9, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						if (state.backtracking>0) {state.failed=true; return fd2;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 7, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}
				else if ( (LA2_1==BRACKET_LEFT) ) {
					int LA2_8 = input.LA(3);
					if ( (LA2_8==INTEGERCONSTANT) ) {
						int LA2_10 = input.LA(4);
						if ( (LA2_10==BRACKET_RIGHT) ) {
							int LA2_13 = input.LA(5);
							if ( (LA2_13==ID) ) {
								int LA2_7 = input.LA(6);
								if ( (LA2_7==PAREN_LEFT) ) {
									int LA2_9 = input.LA(7);
									if ( (LA2_9==PAREN_RIGHT) ) {
										alt2=1;
									}
									else if ( (LA2_9==BOOLEAN||LA2_9==CHAR||LA2_9==FLOAT||LA2_9==INT||LA2_9==STRING||LA2_9==VOID) ) {
										alt2=2;
									}

									else {
										if (state.backtracking>0) {state.failed=true; return fd2;}
										int nvaeMark = input.mark();
										try {
											for (int nvaeConsume = 0; nvaeConsume < 7 - 1; nvaeConsume++) {
												input.consume();
											}
											NoViableAltException nvae =
												new NoViableAltException("", 2, 9, input);
											throw nvae;
										} finally {
											input.rewind(nvaeMark);
										}
									}

								}

								else {
									if (state.backtracking>0) {state.failed=true; return fd2;}
									int nvaeMark = input.mark();
									try {
										for (int nvaeConsume = 0; nvaeConsume < 6 - 1; nvaeConsume++) {
											input.consume();
										}
										NoViableAltException nvae =
											new NoViableAltException("", 2, 7, input);
										throw nvae;
									} finally {
										input.rewind(nvaeMark);
									}
								}

							}

							else {
								if (state.backtracking>0) {state.failed=true; return fd2;}
								int nvaeMark = input.mark();
								try {
									for (int nvaeConsume = 0; nvaeConsume < 5 - 1; nvaeConsume++) {
										input.consume();
									}
									NoViableAltException nvae =
										new NoViableAltException("", 2, 13, input);
									throw nvae;
								} finally {
									input.rewind(nvaeMark);
								}
							}

						}

						else {
							if (state.backtracking>0) {state.failed=true; return fd2;}
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 2, 10, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						if (state.backtracking>0) {state.failed=true; return fd2;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 8, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return fd2;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case FLOAT:
				{
				int LA2_2 = input.LA(2);
				if ( (LA2_2==ID) ) {
					int LA2_7 = input.LA(3);
					if ( (LA2_7==PAREN_LEFT) ) {
						int LA2_9 = input.LA(4);
						if ( (LA2_9==PAREN_RIGHT) ) {
							alt2=1;
						}
						else if ( (LA2_9==BOOLEAN||LA2_9==CHAR||LA2_9==FLOAT||LA2_9==INT||LA2_9==STRING||LA2_9==VOID) ) {
							alt2=2;
						}

						else {
							if (state.backtracking>0) {state.failed=true; return fd2;}
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 2, 9, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						if (state.backtracking>0) {state.failed=true; return fd2;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 7, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}
				else if ( (LA2_2==BRACKET_LEFT) ) {
					int LA2_8 = input.LA(3);
					if ( (LA2_8==INTEGERCONSTANT) ) {
						int LA2_10 = input.LA(4);
						if ( (LA2_10==BRACKET_RIGHT) ) {
							int LA2_13 = input.LA(5);
							if ( (LA2_13==ID) ) {
								int LA2_7 = input.LA(6);
								if ( (LA2_7==PAREN_LEFT) ) {
									int LA2_9 = input.LA(7);
									if ( (LA2_9==PAREN_RIGHT) ) {
										alt2=1;
									}
									else if ( (LA2_9==BOOLEAN||LA2_9==CHAR||LA2_9==FLOAT||LA2_9==INT||LA2_9==STRING||LA2_9==VOID) ) {
										alt2=2;
									}

									else {
										if (state.backtracking>0) {state.failed=true; return fd2;}
										int nvaeMark = input.mark();
										try {
											for (int nvaeConsume = 0; nvaeConsume < 7 - 1; nvaeConsume++) {
												input.consume();
											}
											NoViableAltException nvae =
												new NoViableAltException("", 2, 9, input);
											throw nvae;
										} finally {
											input.rewind(nvaeMark);
										}
									}

								}

								else {
									if (state.backtracking>0) {state.failed=true; return fd2;}
									int nvaeMark = input.mark();
									try {
										for (int nvaeConsume = 0; nvaeConsume < 6 - 1; nvaeConsume++) {
											input.consume();
										}
										NoViableAltException nvae =
											new NoViableAltException("", 2, 7, input);
										throw nvae;
									} finally {
										input.rewind(nvaeMark);
									}
								}

							}

							else {
								if (state.backtracking>0) {state.failed=true; return fd2;}
								int nvaeMark = input.mark();
								try {
									for (int nvaeConsume = 0; nvaeConsume < 5 - 1; nvaeConsume++) {
										input.consume();
									}
									NoViableAltException nvae =
										new NoViableAltException("", 2, 13, input);
									throw nvae;
								} finally {
									input.rewind(nvaeMark);
								}
							}

						}

						else {
							if (state.backtracking>0) {state.failed=true; return fd2;}
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 2, 10, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						if (state.backtracking>0) {state.failed=true; return fd2;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 8, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return fd2;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case CHAR:
				{
				int LA2_3 = input.LA(2);
				if ( (LA2_3==ID) ) {
					int LA2_7 = input.LA(3);
					if ( (LA2_7==PAREN_LEFT) ) {
						int LA2_9 = input.LA(4);
						if ( (LA2_9==PAREN_RIGHT) ) {
							alt2=1;
						}
						else if ( (LA2_9==BOOLEAN||LA2_9==CHAR||LA2_9==FLOAT||LA2_9==INT||LA2_9==STRING||LA2_9==VOID) ) {
							alt2=2;
						}

						else {
							if (state.backtracking>0) {state.failed=true; return fd2;}
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 2, 9, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						if (state.backtracking>0) {state.failed=true; return fd2;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 7, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}
				else if ( (LA2_3==BRACKET_LEFT) ) {
					int LA2_8 = input.LA(3);
					if ( (LA2_8==INTEGERCONSTANT) ) {
						int LA2_10 = input.LA(4);
						if ( (LA2_10==BRACKET_RIGHT) ) {
							int LA2_13 = input.LA(5);
							if ( (LA2_13==ID) ) {
								int LA2_7 = input.LA(6);
								if ( (LA2_7==PAREN_LEFT) ) {
									int LA2_9 = input.LA(7);
									if ( (LA2_9==PAREN_RIGHT) ) {
										alt2=1;
									}
									else if ( (LA2_9==BOOLEAN||LA2_9==CHAR||LA2_9==FLOAT||LA2_9==INT||LA2_9==STRING||LA2_9==VOID) ) {
										alt2=2;
									}

									else {
										if (state.backtracking>0) {state.failed=true; return fd2;}
										int nvaeMark = input.mark();
										try {
											for (int nvaeConsume = 0; nvaeConsume < 7 - 1; nvaeConsume++) {
												input.consume();
											}
											NoViableAltException nvae =
												new NoViableAltException("", 2, 9, input);
											throw nvae;
										} finally {
											input.rewind(nvaeMark);
										}
									}

								}

								else {
									if (state.backtracking>0) {state.failed=true; return fd2;}
									int nvaeMark = input.mark();
									try {
										for (int nvaeConsume = 0; nvaeConsume < 6 - 1; nvaeConsume++) {
											input.consume();
										}
										NoViableAltException nvae =
											new NoViableAltException("", 2, 7, input);
										throw nvae;
									} finally {
										input.rewind(nvaeMark);
									}
								}

							}

							else {
								if (state.backtracking>0) {state.failed=true; return fd2;}
								int nvaeMark = input.mark();
								try {
									for (int nvaeConsume = 0; nvaeConsume < 5 - 1; nvaeConsume++) {
										input.consume();
									}
									NoViableAltException nvae =
										new NoViableAltException("", 2, 13, input);
									throw nvae;
								} finally {
									input.rewind(nvaeMark);
								}
							}

						}

						else {
							if (state.backtracking>0) {state.failed=true; return fd2;}
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 2, 10, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

					}

					else {
						if (state.backtracking>0) {state.failed=true; return fd2;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 8, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}

				}

				else {
					if (state.backtracking>0) {state.failed=true; return fd2;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case STRING:
				{
				int LA2_4 = input.LA(2);
				if ( (LA2_4==ID) ) {
					int LA2_7 = input.LA(3);
					if ( (LA2_7==PAREN_LEFT) ) {
						int LA2_9 = input.LA(4);
						if ( (LA2_9==PAREN_RIGHT) ) {
							alt2=1;
						}
						else if ( (LA2_9==BOOLEAN||LA2_9==CHAR||LA2_9==FLOAT||LA2_9==INT||LA2_9==STRING||LA2_9==VOID) ) {
							alt2=2;
						}
